--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!--Style-->
+    <link rel="stylesheet" href="./Style/style.css">
+    <!--/Style-->
+    <title>Insert Your Email Address</title>
 </head>
-<body>
+<body>          
     
+    <h1>Permission to access this resource</h1>
+    <h2>Please, insert your email address here.</h2>
+
+
+
+    <!--
+        JS
+    -->
+    <script src="./script/script.js" ></script>
 </body>
 </html>
