--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>          
     
     <h1>Permission to access this resource</h1>
-    <h2>Please, insert your email address here.</h2>
+    <h2>Loading</h2>
 
 
 
