--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Style-->
-    <link rel="stylesheet" href="./Style/style.css">
-    <!--/Style-->
+    
     <title>Insert Your Email Address</title>
 </head>
 <body>          
     
     <h1>Permission to access this resource</h1>
-    <h2>Loading</h2>
+    <h2 id="email-address">Loading...</h2>
 
+
+    <h1>Let's play</h1>
+    <h2 id="game">Loading...</h2>
 
 
     <!--
